src/objects/ShizaiSagyoData__c.object
<CustomObject>
    <fields>
        <fullName>KoZaikoData__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>子入出庫データ</label>
        <referenceTo>ZaikoData__c</referenceTo>
        <relationshipLabel>資材工数データ (子在庫データ)</relationshipLabel>
        <relationshipName>ShizaiSagyoData_KoZaikoData</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KoteiKoseiM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>工程構成マスタ</label>
        <referenceTo>KoteiKoseiM__c</referenceTo>
        <relationshipName>ShizaiSagyoData_KoteiKoseiM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OyaZaikoData__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>親入出庫データ</label>
        <referenceTo>ZaikoData__c</referenceTo>
        <relationshipLabel>資材工数データ (親在庫データ)</relationshipLabel>
        <relationshipName>ShizaiSagyoData_OyaZaikoData</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>資材工数データ</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OyaZaikoData__c</columns>
        <columns>KoZaikoData__c</columns>
        <columns>KoteiKoseiM__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>資材工数-{000000000}</displayFormat>
        <label>資材工数番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>